crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__sequences__I107-shuffle-stack-muddying.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/sequences/I107-shuffle-stack-muddying
oracle: 2, brink: 2, matched: 2
passing: 2/2

=== episode [0] === PASS
> "" [Choices: "choice 2" (0), "choice 3" (1) -> 0]
> "" [Done]
outcome: Done

=== episode [1] === PASS
> "" [Choices: "choice 2" (0), "choice 3" (1) -> 1]
> "" [Done]
outcome: Done
