crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__sequences__sequence-cloned-into-glued-line.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/sequences/sequence-cloned-into-glued-line
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "" [Choices: "again" (0) -> 0]
> "ac" [Choices: "again" (0) -> 0]
> "bd" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
> "be" [Choices: "again" (0) -> 0]
outcome: InputsExhausted
