crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__sequences__sequence-leads-multi-construct-line.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/sequences/sequence-leads-multi-construct-line
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "" [Choices: "again" (0) -> 0]
> "apc\n" [Choices: "again" (0) -> 0]
> "bpd\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
> "bpe\n" [Choices: "again" (0) -> 0]
outcome: InputsExhausted
